--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [
     "WeasyPrint>=60.2",
     "whitenoise==6.6.0",
     "mozilla-django-oidc==4.0.0",
+    "livekit-api==0.5.1",
 ]
 
 [project.urls]
