--- a/src/frontend/visio/package.json
+++ b/src/frontend/visio/package.json
@@ -23,6 +23,9 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
     "typescript": "5.5.2",
-    "vite": "5.3.1"
+    "vite": "5.3.1",
+    "@livekit/components-react": "2.3.3",
+    "@livekit/components-styles": "1.0.12",
+    "livekit-client": "2.3.1"
   }
 }
