--- a/env.d/development/kc_postgresql.dist
+++ b/env.d/development/kc_postgresql.dist
@@ -1,11 +1,11 @@
 # Postgresql db container configuration
 POSTGRES_DB=keycloak
-POSTGRES_USER=impress
+POSTGRES_USER=meet
 POSTGRES_PASSWORD=pass
 
 # App database configuration
 DB_HOST=kc_postgresql
 DB_NAME=keycloak
-DB_USER=impress
+DB_USER=meet
 DB_PASSWORD=pass
 DB_PORT=5433
