📝(backend) update pyproject URLs to meet repository
I have renamed the Github project's name, from "Impress" to "Meet".
Updated the pyproject urls section, which provides essential metadata
about the project. This updates ensure all links point to the right
github repository.

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -60,10 +60,10 @@ dependencies = [
 ]
 
 [project.urls]
-"Bug Tracker" = "https://github.com/numerique-gouv/impress/issues/new"
-"Changelog" = "https://github.com/numerique-gouv/impress/blob/main/CHANGELOG.md"
-"Homepage" = "https://github.com/numerique-gouv/impress"
-"Repository" = "https://github.com/numerique-gouv/impress"
+"Bug Tracker" = "https://github.com/numerique-gouv/meet/issues/new"
+"Changelog" = "https://github.com/numerique-gouv/meet/blob/main/CHANGELOG.md"
+"Homepage" = "https://github.com/numerique-gouv/meet"
+"Repository" = "https://github.com/numerique-gouv/meet"
 
 [project.optional-dependencies]
 dev = [
