--- a/env.d/development/common.dist
+++ b/env.d/development/common.dist
@@ -1,25 +1,25 @@
 # Django
 DJANGO_ALLOWED_HOSTS=*
 DJANGO_SECRET_KEY=ThisIsAnExampleKeyForDevPurposeOnly
-DJANGO_SETTINGS_MODULE=impress.settings
+DJANGO_SETTINGS_MODULE=meet.settings
 DJANGO_SUPERUSER_PASSWORD=admin
 
 # Python
 PYTHONPATH=/app
 
-# impress settings
+# Meet settings
 
 # Mail
 DJANGO_EMAIL_HOST="mailcatcher"
 DJANGO_EMAIL_PORT=1025
 
 # Backend url
-IMPRESS_BASE_URL="http://localhost:8072"
+MEET_BASE_URL="http://localhost:8072"
 
 # Media
 STORAGES_STATICFILES_BACKEND=django.contrib.staticfiles.storage.StaticFilesStorage
 AWS_S3_ENDPOINT_URL=http://minio:9000
-AWS_S3_ACCESS_KEY_ID=impress
+AWS_S3_ACCESS_KEY_ID=meet
 AWS_S3_SECRET_ACCESS_KEY=password
 
 # OIDC
