--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
-          repositories: "impress,secrets"
+          repositories: "meet,secrets"
       -
         name: Checkout repository
         uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
         name: Load sops secrets
         uses: rouja/actions-sops@main
         with:
-          secret-file: secrets/numerique-gouv/impress/secrets.enc.env
+          secret-file: secrets/numerique-gouv/meet/secrets.enc.env
           age-key: ${{ secrets.SOPS_PRIVATE }}
       -
         name: Call argocd github webhook
