--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -1,12 +1,12 @@
 #
-# impress package
+# Meet package
 #
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "impress"
+name = "meet"
 version = "0.1.0"
 authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
 classifiers = [
@@ -123,8 +123,8 @@ select = [
 ]
 
 [tool.ruff.lint.isort]
-section-order = ["future","standard-library","django","third-party","impress","first-party","local-folder"]
-sections = { impress=["core"], django=["django"] }
+section-order = ["future","standard-library","django","third-party","meet","first-party","local-folder"]
+sections = { meet=["core"], django=["django"] }
 
 [tool.ruff.per-file-ignores]
 "**/tests/*" = ["S", "SLF"]
