--- a/renovate.json
+++ b/renovate.json
@@ -13,14 +13,7 @@
       "enabled": false,
       "groupName": "ignored js dependencies",
       "matchManagers": ["npm"],
-      "matchPackageNames": [
-        "node",
-        "node-fetch",
-        "i18next-parser",
-        "eslint",
-        "react",
-        "react-dom"
-      ]
+      "matchPackageNames": []
     }
   ]
 }
