🔧(secret) update secret repository
@rouja secrets management relies on a central repository, which manages
all numerique-gouv secrets.

I have created a new subfolder in its "numerique-gouv/secret" repository
to store all update key/credentials related to the Meet project.

--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -25,7 +25,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
-          repositories: "impress,secrets"
+          repositories: "meet,secrets"
       -
         name: Checkout repository
         uses: actions/checkout@v2
@@ -36,7 +36,7 @@ jobs:
         name: Load sops secrets
         uses: rouja/actions-sops@main
         with:
-          secret-file: secrets/numerique-gouv/impress/secrets.enc.env
+          secret-file: secrets/numerique-gouv/meet/secrets.enc.env
           age-key: ${{ secrets.SOPS_PRIVATE }}
       -
         name: Docker meta
@@ -69,7 +69,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
-          repositories: "impress,secrets"
+          repositories: "meet,secrets"
       -
         name: Checkout repository
         uses: actions/checkout@v2
@@ -80,7 +80,7 @@ jobs:
         name: Load sops secrets
         uses: rouja/actions-sops@main
         with:
-          secret-file: secrets/numerique-gouv/impress/secrets.enc.env
+          secret-file: secrets/numerique-gouv/meet/secrets.enc.env
           age-key: ${{ secrets.SOPS_PRIVATE }}
       -
         name: Docker meta
@@ -119,7 +119,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
-          repositories: "impress,secrets"
+          repositories: "meet,secrets"
       -
         name: Checkout repository
         uses: actions/checkout@v2
@@ -130,7 +130,7 @@ jobs:
         name: Load sops secrets
         uses: rouja/actions-sops@main
         with:
-          secret-file: secrets/numerique-gouv/impress/secrets.enc.env
+          secret-file: secrets/numerique-gouv/meet/secrets.enc.env
           age-key: ${{ secrets.SOPS_PRIVATE }}
       -
         name: Call argocd github webhook
