💚(CI) add missing environment variables
Backend tests failed due to missing newly introduced environment variables,
related to LiveKit configurations.

--- a/.github/workflows/meet.yml
+++ b/.github/workflows/meet.yml
@@ -151,6 +151,8 @@ jobs:
       AWS_S3_ENDPOINT_URL: http://localhost:9000
       AWS_S3_ACCESS_KEY_ID: impress
       AWS_S3_SECRET_ACCESS_KEY: password
+      LIVEKIT_API_SECRET: secret
+      LIVEKIT_API_KEY: devkey
 
     steps:
       - name: Checkout repository
