--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@livekit/components-react": "2.3.3",
+    "@livekit/components-styles": "1.0.12",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -23,10 +25,8 @@
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
+    "livekit-client": "2.3.1",
     "typescript": "5.5.2",
-    "vite": "5.3.1",
-    "@livekit/components-react": "2.3.3",
-    "@livekit/components-styles": "1.0.12",
-    "livekit-client": "2.3.1"
+    "vite": "5.3.1"
   }
 }
